--- a/accounts/templates/noauth/landing.html
+++ b/accounts/templates/noauth/landing.html
@@ -769,6 +769,11 @@
             text-align: center;
         }
 
+        .landing-section {
+            max-height: 81vh;
+            min-height: 81vh;
+        }
+
         .landing-subheading {
             display: none;
         }
