--- a/influencer/templates/influencer/brand_unlock.html
+++ b/influencer/templates/influencer/brand_unlock.html
@@ -58,5 +58,16 @@
         font-weight: bold;
         margin-bottom: 4vh;
     }
+
+    @media only screen and (max-width: 900px) {
+        .main-heading {
+            font-size: 20px;
+            line-height: 20px;
+        }
+
+        #id_location {
+            max-width: 88vw;
+        }
+    }
 </style>
 {% endblock %}
