--- a/accounts/templates/accounts/complete_registration/complete_influencer_reg.html
+++ b/accounts/templates/accounts/complete_registration/complete_influencer_reg.html
@@ -17,7 +17,7 @@
     .container {
         width: 40vw;
         margin-left: 30vw;
-        background-color: #EEEEEE;
+        background-color: #fff;
         color: #161A1D;
         border-radius: 5px;
         margin-top: 10vh;
@@ -25,15 +25,27 @@
     }
 
     .heading {
-        font-size: 2em;
-        text-align: center;
+        font-size: 25px;
+        line-height: 25px;
+        margin-bottom: 3vh;
+        font-family: 'Montserrat', sans-serif;
+        text-transform: uppercase;
+        color: #150e41;
+        margin-top: 2vh;
         margin-bottom: 4vh;
+        font-weight: bold;
     }
 
     .container .mdl-button {
-        color: #EEEEEE !important;
-        background-color: #161A1D !important;
-        margin-top: 2vh;
+        background-color: #0471ff !important;
+        color: #fff !important;
+        font-family: 'Montserrat', sans-serif !important;
+        padding: 1vh !important;
+        height: auto;
+        text-align: center;
+        border-radius: 10px;
+        text-transform: none;
+        font-size: 2.5vh;
         width: 100%;
     }
 
@@ -41,6 +53,15 @@
         background-color: #DD2C00;
         border-radius: 5px;
         color: #EEEEEE;
+    }
+
+    @media only screen and (max-width: 900px) {
+        .container {
+            width: 80vw;
+            margin: auto;
+            margin-top: 20px;
+            margin-bottom: 20px;
+        }
     }
 </style>
 {% endblock %}
