--- a/accounts/templates/noauth/base.html
+++ b/accounts/templates/noauth/base.html
@@ -102,6 +102,14 @@
                 width: 75vw;
             }
 
+            .logo-text {
+                font-size: 30px;
+            }
+
+            .logo-img {
+                height: 40px;
+            }
+
             nav.mdl-navigation {
                 text-align: left;
                 padding-left: 5vw;
