--- a/influencer/templates/influencer/facebook_connect.html
+++ b/influencer/templates/influencer/facebook_connect.html
@@ -38,7 +38,7 @@
 </div>
 <style>
     .container {
-        background-color: #EEEEEE;
+        background-color: #fff;
         color: #161A1D;
         padding: 2vh 2vh;
         width: 40vw;
@@ -65,11 +65,18 @@
     }
 
     .container .mdl-button {
-        color: #EEEEEE !important;
-        background-color: #161A1D !important;
-        margin-top: 2vh;
-        margin-bottom: 2vh;
+        background-color: #0471ff !important;
+        color: #fff !important;
+        font-family: 'Montserrat', sans-serif !important;
+        padding: 1vh !important;
+        height: auto;
+        text-align: center;
+        border-radius: 10px;
+        text-transform: none;
+        font-size: 2.5vh;
         width: 100%;
+        margin-top: 15px;
+        margin-bottom: 15px;
     }
 
     .container .fb-button {
@@ -79,6 +86,16 @@
 
     .button-container {
         text-align: center;
+    }
+
+    @media only screen and (max-width: 900px) {
+        .container {
+            width: 80vw;
+            margin: auto;
+            margin-top: 15px;
+            font-size: 15px;
+            margin-bottom: 15px;
+        }
     }
 </style>
 {% endblock %}
