--- a/influencer/templates/influencer/base.html
+++ b/influencer/templates/influencer/base.html
@@ -361,6 +361,11 @@
             .post-btn i {
                 color: #fbc02d;
             }
+
+            #notif-log li {
+                padding-left: 10px;
+                padding-right: 10px;
+            }
         }
     </style>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
