--- a/brand/templates/brand/base.html
+++ b/brand/templates/brand/base.html
@@ -360,6 +360,11 @@
             button.sidenav-btn {
                 height: 60px;
             }
+
+            #notif-log li {
+                padding-left: 10px;
+                padding-right: 10px;
+            }
         }
     </style>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
