--- a/notifications/templates/notifications.html
+++ b/notifications/templates/notifications.html
@@ -1,43 +1,210 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 
-<head></head>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css" />
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+</head>
 
 <body>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Montserrat:wght@500&display=swap');
+
+        * {
+            font-family: 'Quicksand', sans-serif;
+        }
+
+        button {
+            color: #EEEEEE !important;
+            font-family: 'Rubik', sans-serif !important;
+            padding-top: 1px !important;
+        }
+
+        button.mdl-button--colored {
+            background-color: #0471ff !important;
+            color: #fff !important;
+            border-radius: 15px;
+            font-size: 2vh;
+            text-transform: none;
+            line-height: 2vh;
+            font-family: 'Montserrat', sans-serif !important;
+            height: 5vh;
+            display: flex;
+            align-items: center;
+        }
+
+        body {
+            background-color: #150E41;
+        }
+
+        .mdl-layout__header {
+            background-color: transparent;
+            box-shadow: none;
+            margin-top: 3vh;
+        }
+
+        .logo-container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-decoration: none;
+            padding-top: 5px;
+        }
+
+        .logo-img {
+            height: 4vw;
+        }
+
+        .logo-text {
+            font-size: 4.5vh;
+            padding-left: 10px;
+            font-family: 'Quicksand', sans-serif;
+            color: #E0E0E0;
+        }
+
+        .mdl-layout__drawer-button {
+            margin-top: 4.5vh;
+        }
+
+        .mdl-layout__drawer-button>i {
+            font-size: 1.2em;
+            color: #EEEEEE;
+        }
+
+        .mdl-menu a {
+            text-decoration: none;
+            color: #161A1D;
+        }
+
+        .mdl-menu i {
+            vertical-align: middle;
+            font-size: 1.3em;
+        }
+
+        .mobile-back {
+            display: none;
+        }
+
         .container {
-            width: 45vw;
+            width: 60vw;
             margin: auto;
+            padding: 15px;
+            border-radius: 15px;
+            background: #fff;
+            margin-top: 40px;
+            min-height: 30vh;
         }
 
         .main-heading {
-            font-family: 'Assistant', sans-serif;
+            font-size: 4vh;
+            font-weight: 300;
+            padding-top: 2vh;
+            color: #150e41;
+            font-family: 'Montserrat', sans-serif;
+            font-weight: bold;
+            margin-bottom: 4vh;
+            text-transform: uppercase;
         }
 
-        .notifications-list * {
-            cursor: pointer;
+        .mdl-card {
             width: 100%;
+            cursor: pointer;
         }
 
         a {
             text-decoration: none;
         }
+
+        .empty-notifs {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            margin-top: 40px;
+            font-size: 20px;
+        }
+
+        @media only screen and (max-width: 900px) {
+            .mdl-layout__header-row .mdl-navigation__link {
+                display: none;
+            }
+
+            .mdl-layout__header-row {
+                padding: 10px;
+            }
+
+            .logo-img {
+                height: 40px;
+            }
+
+            .logo-text {
+                font-size: 25px;
+            }
+
+            .mdl-layout--fixed-header>.mdl-layout__header {
+                margin-top: 10px;
+            }
+
+            .mobile-back {
+                margin-top: 5px;
+                display: initial;
+            }
+
+            .container {
+                width: 80%;
+            }
+        }
     </style>
-    <div class="container">
-        <h1 class="main-heading">
-            Notifications
-        </h1>
-        <ul class="notifications-list mdl-list">
-            {% for notification in all_notifications %}
-            <a href="{{ notification.link }}">
-                <li class="mdl-list__item mdl-card mdl-shadow--2dp">
-                    <span class="mdl-list__item-primary-content">
-                        {{ notification.message }}
-                    </span>
-                </li>
-            </a>
-            {% endfor %}
-        </ul>
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+        <header class="mdl-layout__header">
+            <div class="mdl-layout__header-row">
+                <a href="{% url 'accounts:landing' %}" class="logo-container">
+                    <img src="{% static 'logo.png' %}" alt="Endorsity" class="logo-img" />
+                    <div class="logo-text">Endorsity</div>
+                </a>
+                <div class="mdl-layout-spacer"></div>
+                <a class="mdl-navigation__link" href="{% url 'accounts:landing' %}">
+                    <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+                        <i class="material-icons">dashboard</i>
+                        &nbsp;&nbsp;Return To Dashboard
+                    </button>
+                </a>
+                <a class="mobile-back" href="{% url 'accounts:landing' %}">
+                    <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+                        <i class="material-icons">keyboard_backspace</i>
+                        &nbsp;&nbsp;Return
+                    </button>
+                </a>
+            </div>
+        </header>
+        <main class="mdl-layout__content">
+            <div class="page-content">
+                <div class="container">
+                    <div class="main-heading">
+                        Notifications
+                    </div>
+                    <ul class="notifications-list mdl-list">
+                        {% for notification in all_notifications %}
+                        <a href="{{ notification.link }}">
+                            <li class="mdl-list__item mdl-card mdl-shadow--2dp">
+                                <span class="mdl-list__item-primary-content">
+                                    {{ notification.message }}
+                                </span>
+                            </li>
+                        </a>
+                        {% empty %}
+                        <div class="empty-notifs">No notifications.</div>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
+        </main>
     </div>
 </body>
 
